Add cookie recipe content

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -9,5 +9,39 @@
 <body>
     <h1>Wes' Cinnamon Cookies</h1>
     <img src="../images/cookies.jpeg" alt="Cookies">
+    <h2>Description</h2>
+    <p>This recipe came about when I wanted chocolate chip cookies and
+        realized halfway through I had no chocolate chips!</p>
+    <p>It is basically a snickerdoodle cookie without the cream of
+        tartar tang.</p>
+    <h2>Ingredients</h2>
+    <uL>
+        <li>2 cups all purpose flower</li>
+        <li>1/2 teaspoon baking soda</li>
+        <li>1/2 teaspoon of salt</li>
+        <li>3/4 cup of butter, melted</li>
+        <li>1 cup packed brown sugar</li>
+        <li>1/2 cup white sugar</li>
+        <li>1 tablespoon vanilla extract</li>
+        <li>1 egg</li>
+        <li>1 egg yolk</li>
+        <li>1 1/2 teaspoons ground cinnamon</li>
+    </uL>
+    <h2>Topping</h2>
+    <ul>
+        <li>1/3 cup white sugar</li>
+        <li>1 teaspoon ground cinnamon</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat the oven to 325 degrees F (165 degrees C). Grease cookie sheets or line with parchment paper.</li>
+        <li>Sift together the flour, baking soda and salt; set aside.</li>
+        <li>In a medium bowl, cream together the melted butter, brown sugar and white sugar until well blended.
+        Beat in the vanilla, egg, and egg yolk until light and creamy. Mix in the sifted ingredients until just blended. 
+        Stir in the chocolate chips by hand using a wooden spoon. Drop cookie dough 1/4 cup at a time onto the prepared
+        cookie sheets. Cookies should be about 3 inches apart.</li>
+        <li>Bake for 15 to 17 minutes in the preheated oven, or until the edges are lightly toasted. Cool on
+        baking sheets for a few minutes before transferring to wire racks to cool completely.</li>
+    </ol>
 </body>
 </html>
