--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cookies.html">Wes' Cinnamon Cookies</a>
+    <ul>
+        <li><a href="recipes/cookies.html">Wes' Cinnamon Cookies</a></li>
+        <li><a href="recipes/waffles.html">Saturady Morning Waffles</a></li>
+    </ul>
 </body>
 </html>
